[package]
name = "flange-flat-tree"
version = "0.1.0"
edition = "2021"
authors = ["Nathan Hüeksen <nathan@wintercloud.de>"]
description = "A tree that can be expanded by attaching new values to the node without mutability of the old ones"
keywords = ["datastructure", "tree"]
repository = "https://github.com/RudolfVonKrugstein/flange-flat-tree"
homepage = "https://github.com/RudolfVonKrugstein/flange-flat-tree"
documentation = "https://github.com/RudolfVonKrugstein/flange-flat-tree"
readme = "README.md"
license = "MIT"
exclude = [".idea/", "node_modules", "yarn.lock", ".github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
